# flash_cards_bot

./: .env.dist  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: efe170d36a6a_.py
src/: config.py  main.py
src/bot/: dispatcher.py  states.py
src/bot/aiogram_dialog/: scrolling_group.py
src/bot/handlers/: __init__.py  base.py  common_handlers.py  dialogs.py  handlers.py
src/bot/handlers/bebris/main/: dialogs.py  getters.py  handlers.py
src/bot/handlers/bebris/repitition/: dialogs.py  getters.py  handlers.py
src/bot/handlers/user/bebris_cards/: dialogs.py  getters.py  handlers.py
src/bot/middlewares/: check_access.py  database.py  permissions.py
src/bot/structures/: data_structure.py  role.py
src/db/: __init__.py  database.py
src/db/models/: __init__.py  base.py  user.py
src/db/models/bbr_models/: __init__.py  flash_card.py  lesson.py  playlist.py
src/db/repositories/: __init__.py  abstract.py  user.py
src/db/repositories/bbr_repo/: flash_card.py  lesson.py  playlist.py
src/services/: __init__.py  bbr_cards.py  bbr_repitition.py
